@@ -7,6 +7,7 @@ import de.vitagroup.num.domain.admin.UserDetails;
 import de.vitagroup.num.domain.dto.SearchCriteria;
 import de.vitagroup.num.domain.dto.SearchFilter;
 import de.vitagroup.num.domain.dto.UserNameDto;
+import de.vitagroup.num.domain.repository.UserDetailsRepository;
 import de.vitagroup.num.domain.specification.UserDetailsSpecification;
 import de.vitagroup.num.mapper.OrganizationMapper;
 import de.vitagroup.num.service.exception.BadRequestException;
@@ -36,16 +37,22 @@ import org.springframework.stereotype.Service;
 import javax.annotation.Nullable;
 import javax.transaction.Transactional;
 import javax.validation.constraints.NotNull;
+import java.sql.Timestamp;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.util.*;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
 import static de.vitagroup.num.domain.templates.ExceptionsTemplate.*;
+import static java.util.Objects.isNull;
 
 @Slf4j
 @Service
 @AllArgsConstructor
 public class UserService {
+  private final UserDetailsRepository userDetailsRepository;
 
   private static final int MAX_USER_COUNT = 100000;
 
@@ -224,7 +231,7 @@ public class UserService {
       removeRoles =
           existingRoles.stream()
               .filter(role -> !roleNames.contains(role.getName()))
-              .collect(Collectors.toList())
+              .toList()
               .toArray(new Role[] {});
 
       addRoles =
@@ -238,7 +245,7 @@ public class UserService {
                       throw new BadRequestException(UserService.class, UNKNOWN_ROLE);
                     }
                   })
-              .collect(Collectors.toList())
+              .toList()
               .toArray(new Role[] {});
 
       if (Arrays.stream(removeRoles)
@@ -318,53 +325,31 @@ public class UserService {
   /**
    * Retrieved a list of users that match the search criteria
    *
-   * @param approved  Indicates that the user has been approved by the admin
-   * @param search    A string contained in username, first or last name, or email
-   * @param withRoles flag whether to add roles to the user structure, if present, or not
+   * @param searchCriteria filter[approved]  Indicates that the user has been approved by the admin,
+   *                      filter[search]    A string contained in username, first or last name, or email
+   *                      filter[withRoles] flag whether to add roles to the user structure, if present, or not
    * @return the users that match the search parameters and with optional roles if indicated
    */
-  public Set<User> searchUsers(
-      String loggedInUserId,
-      Boolean approved,
-      String search,
-      Boolean withRoles,
-      List<String> callerRoles) {
-
-    UserDetails loggedInUser = userDetailsService.checkIsUserApproved(loggedInUserId);
-
-    Set<User> users = keycloakFeign.searchUsers(search, MAX_USER_COUNT);
-    if (users == null) {
-      return Collections.emptySet();
-    }
-    users.removeIf(u -> userDetailsService.getUserDetailsById(u.getId()).isEmpty());
-    users.forEach(this::addUserDetails);
-
-    if ((withRoles != null && withRoles) || Roles.isProjectLead(callerRoles)) {
-      users.forEach(this::addRoles);
-    }
-
-    if (approved != null) {
-      users.removeIf(user -> approved ? user.isNotApproved() : user.isApproved());
-    }
-
-    return filterByCallerRole(users, callerRoles, loggedInUser);
-  }
-
   @Transactional
-  public Page<User> searchUsersWithPagination(String loggedInUserId, List<String> callerRoles, SearchCriteria searchCriteria, Pageable pageable) {
+  public Page<User> searchUsers(String loggedInUserId, List<String> callerRoles, SearchCriteria searchCriteria, Pageable pageable) {
 
     UserDetails loggedInUser = userDetailsService.checkIsUserApproved(loggedInUserId);
     validateSort(searchCriteria);
 
     Set<String> usersUUID = new HashSet<>();
+    List<String> requestedRoles = Collections.emptyList();
     boolean searchCriteriaProvided = searchCriteria.getFilter() != null &&
             searchCriteria.getFilter().containsKey(SearchCriteria.FILTER_SEARCH_BY_KEY);
-    if (searchCriteriaProvided) {
+    boolean filterByRoles = searchCriteria.getFilter() != null && searchCriteria.getFilter().containsKey(SearchCriteria.FILTER_BY_ROLES);
+    if (filterByRoles) {
+      requestedRoles = getRequestedRoles((String) searchCriteria.getFilter().get(SearchCriteria.FILTER_BY_ROLES));
+    }
+    if (searchCriteriaProvided || CollectionUtils.isNotEmpty(requestedRoles)) {
       String searchValue = searchCriteria.getFilter() != null &&
               searchCriteria.getFilter().containsKey(SearchCriteria.FILTER_SEARCH_BY_KEY) ? (String) searchCriteria.getFilter().get(SearchCriteria.FILTER_SEARCH_BY_KEY) : null;
-      usersUUID = this.findUsersUUID(searchValue);
+      usersUUID = this.filterKeycloakUsers(searchValue, requestedRoles);
     }
-    if (CollectionUtils.isEmpty(usersUUID) && searchCriteriaProvided) {
+    if (CollectionUtils.isEmpty(usersUUID) && (searchCriteriaProvided || CollectionUtils.isNotEmpty(requestedRoles))) {
       return Page.empty(pageable);
     }
     Pageable pageRequest = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize());
@@ -421,12 +406,11 @@ public class UserService {
         organizationId = loggedInUser.getOrganization().getId();
       }
     }
-    UserDetailsSpecification userDetailsSpecification = UserDetailsSpecification.builder()
+    return UserDetailsSpecification.builder()
             .approved(approved)
             .loggedInUserOrganizationId(organizationId)
             .usersUUID(usersUUID)
             .build();
-    return userDetailsSpecification;
   }
 
   private void sortUsers(List<User> users, SearchCriteria searchCriteria) {
@@ -435,9 +419,9 @@ public class UserService {
             Sort.Direction.valueOf(searchCriteria.getSort().toUpperCase()) : Sort.Direction.DESC;
     Comparator<User> userComparator = getComparator(field);
     if (sortOrder.isAscending()) {
-      Collections.sort(users, Comparator.nullsLast(userComparator));
+      users.sort(Comparator.nullsLast(userComparator));
     } else {
-      Collections.sort(users, Comparator.nullsLast(userComparator.reversed()));
+      users.sort(Comparator.nullsLast(userComparator.reversed()));
     }
   }
 
@@ -521,39 +505,6 @@ public class UserService {
 
     return notifications;
   }
-
-  private Set<User> filterByCallerRole(
-      Set<User> users, List<String> callerRoles, UserDetails loggedInUser) {
-    if (callerRoles.contains(Roles.SUPER_ADMIN)) {
-      return users;
-    }
-
-    Set<User> outputSet = new HashSet<>();
-
-    if (Roles.isOrganizationAdmin(callerRoles) && loggedInUser.getOrganization() != null) {
-      Long loggedInOrgId = loggedInUser.getOrganization().getId();
-      users.forEach(
-          user -> {
-            log.info("Processed user {} ", user);
-            if (user.getOrganization() != null
-                && loggedInOrgId.equals(user.getOrganization().getId())) {
-              outputSet.add(user);
-            }
-          });
-    }
-
-    if (Roles.isProjectLead(callerRoles)) {
-      users.forEach(
-          user -> {
-            if (user.getRoles() != null && user.getRoles().contains(Roles.RESEARCHER)) {
-              outputSet.add(user);
-            }
-          });
-    }
-
-    return outputSet;
-  }
-
   private void deleteNotVerifiedUser(String userId) {
     try {
       User user = keycloakFeign.getUser(userId);
@@ -581,6 +532,47 @@ public class UserService {
       cache.clear();
       initializeUsersCache();
     }
+  }
+  private void deleteNotApprovedUser(UserDetails userDetails) {
+  	String userId = userDetails.getUserId();
+    try {
+		if (userId != null){
+
+          Timestamp createdAt;
+          if (isNull(userDetails.getCreatedDate())) {
+            User userForDeletion = keycloakFeign.getUser(userDetails.getUserId());
+            if (isNull(userForDeletion.getCreatedTimestamp())){
+              return;
+            } else {
+              createdAt = new Timestamp(userForDeletion.getCreatedTimestamp());
+            }
+          } else {
+            createdAt = new Timestamp(userDetails.getCreatedDate().toInstant(ZoneOffset.UTC).toEpochMilli());
+          }
+
+          Date createdAtDate=new Date(createdAt.getTime());
+          boolean shouldDelete = LocalDateTime.from(createdAtDate.toInstant().atZone(ZoneId.of("UTC"))).
+                  plusDays(30).isBefore(LocalDateTime.now());
+          if (shouldDelete) {
+            keycloakFeign.deleteUser(userId);
+            userDetailsService.deleteUserDetails(userId);
+            log.warn("- deleteUnapprovedUsersAfter30Days - userID: {} isApproved: {} deletedUser: {}", userId, userDetails.isApproved(), userDetails);
+          }
+        }
+    } catch (FeignException.BadRequest | FeignException.InternalServerError e) {
+      throw new SystemException(UserService.class, AN_ERROR_HAS_OCCURRED_CANNOT_RETRIEVE_USERS_PLEASE_TRY_AGAIN_LATER,
+              String.format(AN_ERROR_HAS_OCCURRED_CANNOT_RETRIEVE_USERS_PLEASE_TRY_AGAIN_LATER, e.getMessage()));
+    } catch (FeignException.NotFound e) {
+      log.warn("User not found in keycloak: {}", userId);
+      throw new ResourceNotFound(UserService.class, USER_NOT_FOUND, String.format(USER_NOT_FOUND, userId));
+    }
+  }
+
+  @Scheduled(cron = "${user-service.delete-users-cron}", zone = "UTC")//0 0 5 * * *
+  @Transactional
+  public void deleteUnapprovedUsersAfter30Days() {
+    List<UserDetails> users = userDetailsRepository.findAllByApproved(false).orElse(new ArrayList<>());
+    users.forEach(this::deleteNotApprovedUser);
   }
 
   @CachePut(cacheNames = USERS_CACHE, key = "#userIdToChange")
@@ -611,17 +603,28 @@ public class UserService {
   /**
    * Retrieved a list of users UUID that match the search criteria
    * @param search A string contained in username, first or last name, or email
-   * @return
+   * @return a Set of filteredUsers
    */
   public Set<String> findUsersUUID(String search) {
+    return filterKeycloakUsers(search, Collections.emptyList());
+  }
+
+  private Set<String> filterKeycloakUsers(String search, List<String> roles) {
     Set<String> userUUIDs = new HashSet<>();
     ConcurrentMapCache usersCache = (ConcurrentMapCache) cacheManager.getCache(USERS_CACHE);
-    if (usersCache != null && usersCache.getNativeCache().size() != 0) {
+    if ((StringUtils.isNotEmpty(search) || CollectionUtils.isNotEmpty(roles)) && usersCache != null && usersCache.getNativeCache().size() != 0) {
       ConcurrentMap<Object, Object> users = usersCache.getNativeCache();
       for (Map.Entry<Object, Object> entry : users.entrySet()) {
-        if (entry.getValue() instanceof User) {
-          User user = (User) entry.getValue();
-          if (StringUtils.containsIgnoreCase(user.getFullName(), search) || StringUtils.containsIgnoreCase(user.getEmail(), search)) {
+        if (entry.getValue() instanceof User user) {
+          if (StringUtils.isNotEmpty(search) && CollectionUtils.isNotEmpty(roles)) {
+            if ((StringUtils.containsIgnoreCase(user.getFullName(), search) || StringUtils.containsIgnoreCase(user.getEmail(), search)) &&
+                    CollectionUtils.containsAny(user.getRoles(), roles)) {
+              userUUIDs.add((String) entry.getKey());
+            }
+          } else if (StringUtils.isNotEmpty(search) && (StringUtils.containsIgnoreCase(user.getFullName(), search) ||
+                  StringUtils.containsIgnoreCase(user.getEmail(), search))) {
+            userUUIDs.add((String) entry.getKey());
+          } else if (CollectionUtils.isNotEmpty(roles) && CollectionUtils.containsAny(user.getRoles(), roles)) {
             userUUIDs.add((String) entry.getKey());
           }
         }
@@ -674,5 +677,10 @@ public class UserService {
       }
     }
       return getUserById(uuid, withRole);
+  }
+
+  private List<String> getRequestedRoles(String roles) {
+    return Arrays.stream(roles.split(","))
+            .collect(Collectors.toList());
   }
 }
